# post-bangumi

./: .editorconfig  .env-sample  .gitignore  Dockerfile  README.md  main.py  post-bangumi.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
src/: extractor.py  info.py  models.py  utils.py
ui/: index.html  package.json  vite.config.js
ui/assets/: index-0a921786.css  index-128b00ec.js  index-507b6baf.js  index-5ec9cd48.css  index-63a08bb1.css  index-75339829.css  index-799a57d7.js  index-7c029e0c.js  index-7cf5b1b5.css  index-876e7c44.css  index-9dab70c3.css  index-a1fa4d7f.js  index-c8413045.js  index-d1428445.js
ui/src/: App.jsx  App.module.css  index.css  index.jsx
